Fixed About and Portfolio Page Text Alignment

--- a/portfolio/src/components/Navbar/Navbar.css
+++ b/portfolio/src/components/Navbar/Navbar.css
@@ -23,6 +23,30 @@ header {
     position: sticky;
     top: 0;
     height: 15vh;
+    opacity: 1;
+    z-index: 100;
+}
+
+/* .portfolio {
+    color: #0088a9;
+    padding: 0px 20px;
+    @media only screen and (max-width: 600px) {
+        font-size: 10px;
+        padding: 0px 2px;
+      }
+}
+
+.about {
+    color: #0088a9;
+    padding: 0px 20px;
+    @media only screen and (max-width: 600px) {
+        font-size: 10px;
+        padding: 0px 2px;
+      }
+}*/
+
+.logo {
+    cursor: pointer;
 }
 
 .nav_links {
